feat(ai): 07-09 白天批次 + F-481GP2 走查修复批(11项)一并落地
两批工作合并提交(改动交织无法干净拆分):

- 07-09 白天 25 项:工具域合并(~64→6 域工具)、技能二级目录+BM25 检索、
  AiPromptBuilder 稳定前缀拆分、agent 护栏(签名式卡死检测/软着陆/证据门)、
  4 个 UI bug 修复(详见 开发记录/最新开发进度.md 〇·前批)
- F-481GP2 走查 11 项:mods_install 参数透传+SKILL 重写、审批合并为 Auto
  (挂机禁高危)、todo 任务粒度+账本护栏、设置页 IA 改版(删回复语言/AI标题命名)、
  内置技能隐藏+JSON 化、MCP args/env+JSON 编辑器、搜索 Key 按服务商拆分、
  推理下拉框对比度、思考/工具卡 box-model 统一、ShellToolOverlap 越权下载提醒、
  后台任务 N/M 消歧(详见 开发记录/最新开发进度.md 〇)
- 新增 docs/trace-walkthrough-F-481GP2.md 走查文档;更新日志/开发记录已记账
- 验证:HMCLAI 428 + HMCL 335 测试 0 失败;修复 planBadge 因 CSS 清理
  静默丢色的连带 bug(新增 .ai-plan-mode-badge)
- 注:ScreenShots/0709-23-21 中一张含明文 Tavily Key 的截图未入库,
  待轮换密钥后另行处理

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>